[project]
name = "network_data"
version = "0.1.0"
description = "Network configuration data package"

dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["network_data"]

[tool.setuptools.package-data]
network_data = [
    "*.yaml",
    "global/*.yaml",
    "sites/*.yaml"
]