[metadata]
name = network_data
version = 0.1.0
description = Reusable network data YAMLs for network automation
author = Your Name
author_email = you@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moon-shiner/network_data

[options]
packages = find:
python_requires = >=3.12,<4.0
include_package_data = True

[options.package_data]
* = *.yaml, sites/*.yaml